<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Login">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/password_place_holder"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_login"
        android:padding="10dp"
        android:background="@drawable/rounded_btn"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:padding="10dp"
        android:background="@drawable/rounded_btn"
        android:layout_margin="10dp"/>

</LinearLayout>